--- a/tviser/package.json
+++ b/tviser/package.json
@@ -16,12 +16,14 @@
     "@nuxtjs/auth": "^4.8.5",
     "@nuxtjs/axios": "^5.9.4",
     "@nuxtjs/svg-sprite": "^0.4.7",
+    "@trevoreyre/autocomplete-vue": "^2.1.0",
     "bootstrap-vue": "^2.3.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.5.0",
     "sass-loader": "^8.0.2",
-    "vue-awesome-swiper": "^3.1.3"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-select": "^3.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
